@@ -2,6 +2,9 @@
 
 Changes with Apache 2.3.5
 
+  *) mod_ldap: Introduce new config option LDAPTimeout to set the timeout
+     for LDAP operations like bind and search. [Stefan Fritsch]
+
   *) mod_proxy, mod_proxy_ftp: Move ProxyFtpDirCharset from mod_proxy to
      mod_proxy_ftp. [Takashi Sato]
 
